--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="homestyle.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no ">
-    <title> BuyTech!</title>
+    <title> BuyTech! Home</title>
   </head>
   <body style="width:100vw;"class="container-fluid m-0 p-0">
     <header class="rounded-bottom container-fluid p-3  ">
@@ -17,10 +17,10 @@
       <nav id="navbar" class="d-none d-lg-flex justify-content-end pb-2 float-right">
         <ul class=" nav d-xs-none d-sm-none d-md-none d-lg-flex justify-content-end pb-5">
           <li class="nav-item">
-            <a class="nav-link " href="#">LOGIN</a>
+            <a class="nav-link " href="LOGIN.html">LOGIN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">REGISTRATE</a>
+            <a class="nav-link " href="REGISTRATE.html" target="_blank">REGISTRATE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="#">CARRITO DE COMPRAS</a>
@@ -102,7 +102,7 @@
         </nav>
 
       </section>
-      
+
 
 
     </main>
