--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
   </head>
   <body style="width:100vw;"class="container-fluid m-0 p-0">
     <header class="rounded-bottom container-fluid p-3  ">
-      <h1 class="p-1  float-left"> BuyTech</h1>
+      <h1 class="p-1 mx-3  float-left"> BuyTech</h1>
       <nav id="navbar" class="d-none d-lg-flex justify-content-end pb-2 float-right">
-        <ul class=" nav d-xs-none d-sm-none d-md-none d-lg-flex justify-content-end pb-5">
+        <ul class=" nav d-xs-none d-sm-none d-md-none d-lg-flex justify-content-end p-2">
           <li class="nav-item">
             <a class="nav-link " href="#">LOGIN</a>
           </li>
@@ -37,7 +37,7 @@
 
     <main class="container-fluid fondo">
       <section id="carrusel" class="row pt-2 ">
-        <div id="slides" class="mx-auto col-sm-12 col-md-6 carousel slide" data-ride="carousel">
+        <div id="slides" class="mx-auto col-sm-12 col-md-4 carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="First slide">
@@ -51,39 +51,53 @@
           </div>
         </div>
       </section>
-      <section id="productosPopulares" class="row d-flex justify-content-around mt-3  ">
+      <section id="categorias" class="row d-flex justify-content-around mt-3 mb-3  ">
         <div id="productContainer"class="row mx-3 px-3 rounded">
 
           <div class="col-12">
-            <h2 class="text-center py-3 my-3 ">Productos Populares / Ofertas</h2>
+            <h2 id="titulo-categorias"class="text-center py-3 my-3 rounded">Categorías </h2>
           </div>
-        <div id="imgcontainer" class="d-flex flex-row row ">
-          <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2 px-auto mx-auto pb-4 mx-1">
-            <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
-            <h3>Lorem ipsum</h3>
-            <p>Dolor sit amet</p>
+          <div id="imgcontainer" class="d-flex flex-row justify-content-between row pb-3">
+            <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
+              <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
+              <h3 class="text-center">COMPUTADORAS</h3>
+              <p class="text-center p-2">Ver más!</p>
+            </div>
+            <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
+              <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
+              <h3>CELULARES</h3>
+              <p class="text-center p-2">Ver más!</p>
+            </div>
+            <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
+              <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
+              <h3> TABLETS</h3>
+              <p class="text-center p-2">Ver más!</p>
+            </div>
+            <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
+              <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
+              <h3>OTROS</h3>
+              <p class="text-center p-2">Ver más!</p>
+            </div>
           </div>
-          <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2 px-auto mx-auto pb-4 mx-1">
-            <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
-            <h3>Lorem ipsum</h3>
-            <p>Dolor sit amet</p>
-          </div>
-          <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2 px-auto mx-auto pb-4 mx-1">
-            <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
-            <h3>Lorem ipsum</h3>
-            <p>Dolor sit amet</p>
-          </div>
-          <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2 px-auto mx-auto pb-4 mx-1">
-            <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
-            <h3>Lorem ipsum</h3>
-            <p>Dolor sit amet</p>
-          </div>
-        </div>
 
       </div>
 
       </section>
-      <section id="navbarMobile" class="row d-block d-lg-none">
+      <section id="" class="d-none d-md-flex row">
+        <div class="col-md-6 ">
+          <h2> Ofertas especiales</h2>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        </div>
+        <div class="col-md-6 d-flex flex-column ">
+          <img class=" w-75" src="https://placeimg.com/640/480/tech" alt="fotodecategoria">
+
+        </div>
+
+
+
+      </section>
+      <section id="navbarMobile" class="row mt-3 d-block d-lg-none">
         <nav id="navbar" class="">
           <ul class=" nav  d-flex flex-column justify-content-end pb-5">
             <li class="nav-item ">
@@ -102,10 +116,31 @@
         </nav>
 
       </section>
-      
+
 
 
     </main>
+
+    <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
+      <nav id="navbar" class="d-flex justify-content-center">
+        <ul class=" nav  row justify-content-around p-2">
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">NOSOTROS</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">CONTACTO</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+          </li>
+        </ul>
+      </nav>
+
+    </footer>
+
 
   </body>
 </html>
