--- a/LOGIN.html
+++ b/LOGIN.html
@@ -6,12 +6,34 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="css/logincss.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no ">
     <title>BuyTech! Login</title>
   </head>
   <body>
+    <header class="rounded-bottom container-fluid p-3  ">
+      <h1 class="p-1 mx-3  float-left"> BuyTech</h1>
+      <nav id="navbar" class="d-none d-lg-flex justify-content-end pb-2 float-right">
+        <ul class=" nav d-xs-none d-sm-none d-md-none d-lg-flex justify-content-end p-2">
+          <li class="nav-item">
+            <a class="nav-link " href="#">LOGIN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">REGISTRATE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">CARRITO DE COMPRAS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">PERFIL DE USUARIO</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="mt-2 d-block d-md-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary mt-2 d-block d-md-none float-right" name="button"> <i class="icon ion-md-menu"></i></button></a>
+
+      <a class="mt-2 d-none d-md-block d-lg-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary  mt-2 d-none d-md-block d-lg-none float-right" name="button"><i class="icon ion-md-menu"></i></button></a>
+    </header>
       <div class="row">
         <div class="login_page">
           <div class="login_container">
@@ -27,14 +49,33 @@
           <input type="password" class="form-control" id="contraseña" placeholder="contraseña">
           <small id="emailHelp" class="contraseña"></small>
          </div>
-        <div class="login-form"
-         <a class = "btn btn link" id = "forgotten-password" role ="button">He olvidado mi contraseña</a>
-
+        <div class="login-form">
+         <a href="#" class = "btn btn link" id = "forgotten-password" role ="button">He olvidado mi contraseña</a>
+    
 
         </div>
         <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
      </div>
     </div>
   </div>
+  <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
+    <nav id="navbar" class="d-flex justify-content-center">
+      <ul class=" nav  row justify-content-around p-2">
+        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+          <a class="nav-link  text-center " href="#">NOSOTROS</a>
+        </li>
+        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+          <a class="nav-link  text-center " href="#">CONTACTO</a>
+        </li>
+        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+          <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+        </li>
+        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+          <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+        </li>
+      </ul>
+    </nav>
+
+  </footer>
   </body>
 </html>
