--- a/REGISTRATE.html
+++ b/REGISTRATE.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body class="container-fluid">
     <header class="rounded-bottom container-fluid p-3  ">
       <h1 class="p-1 mx-3  float-left"> BuyTech</h1>
       <nav id="navbar" class="d-none d-lg-flex justify-content-end pb-2 float-right">
@@ -37,9 +37,12 @@
       <a class="mt-2 d-none d-md-block d-lg-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary  mt-2 d-none d-md-block d-lg-none float-right" name="button"><i class="icon ion-md-menu"></i></button></a>
     </header>
 
-      <div class="register">
-        <h3>Registracion</h3>
-      </div>
+      <section class="row register ">
+        <div class="col-6 mx-auto">
+
+         <h2 class="text-center">Registracion</h3>
+        </div>
+      </section>
     <form>
       <div class="registracion">
       <div class="form-group">
@@ -131,11 +134,11 @@
       </div>
     </div>
   </div>
-  <div class="container_redes">
-    <div class="container-footer">
-        <div class="caja_contacto_social">
-        <a class= "texto-contactenos" href="#">CONTÁCTENOS</a>
-        </div>
+    <div class="container_redes">
+      <div class="container-footer">
+          <div class="caja_contacto_social">
+            <a class= "texto-contactenos" href="#">CONTÁCTENOS</a>
+          </div>
       </div>
     </div>
     <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
