--- a/productos.html
+++ b/productos.html
@@ -125,7 +125,24 @@
 
       </main>
       <!-- acá va el footer -->
-      <footer>
+      <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
+        <nav id="navbar" class="d-flex justify-content-center">
+          <ul class=" nav  row justify-content-around p-2">
+            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+              <a class="nav-link  text-center " href="#">NOSOTROS</a>
+            </li>
+            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+              <a class="nav-link  text-center " href="#">CONTACTO</a>
+            </li>
+            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+              <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+            </li>
+            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+              <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+            </li>
+          </ul>
+        </nav>
+
       </footer>
     </body>
     </html>
