--- a/carrito.html
+++ b/carrito.html
@@ -13,17 +13,17 @@
   </head>
   <body style="width: 100vw; " class="container-fluid pr-0 m-0">
     <header class="rounded-bottom container-fluid p-3 mb-5 ">
-      <h1 class="p-1 mx-3  float-left"> BuyTech</h1>
+      <h1 class="p-1 mx-3  float-left"> <a href="home.html">BuyTech</a></h1>
       <nav id="navbar" class="d-none d-lg-flex justify-content-end pb-2 float-right">
         <ul class=" nav d-xs-none d-sm-none d-md-none d-lg-flex justify-content-end p-2">
           <li class="nav-item">
-            <a class="nav-link " href="#">LOGIN</a>
+            <a class="nav-link " href="LOGIN.html">LOGIN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">REGISTRATE</a>
+            <a class="nav-link " href="REGISTRATE.html">REGISTRATE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">CARRITO DE COMPRAS</a>
+            <a class="nav-link " href="carrito.html">CARRITO DE COMPRAS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="#">PERFIL DE USUARIO</a>
@@ -84,10 +84,10 @@
               <a class="nav-link  text-center " href="#">CONTACTO</a>
             </li>
             <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+              <a class="nav-link  text-center " href="carrito.html">CARRITO DE COMPRAS</a>
             </li>
             <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+              <a class="nav-link   text-center " href="faq.html">PREGUNTAS FRECUENTES</a>
             </li>
           </ul>
         </nav>
