--- a/productos.html
+++ b/productos.html
@@ -135,10 +135,10 @@
               <a class="nav-link  text-center " href="#">CONTACTO</a>
             </li>
             <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+              <a class="nav-link  text-center " href="carrito.html">CARRITO DE COMPRAS</a>
             </li>
             <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+              <a class="nav-link   text-center " href="faq.html">PREGUNTAS FRECUENTES</a>
             </li>
           </ul>
         </nav>
