--- a/carrito.html
+++ b/carrito.html
@@ -67,10 +67,10 @@
           </table>
 
         </article>
-        <article class="row d-flex justify-content-end">
-          <div id="total" class="mr-5">
-            <h3>TOTAL</h3>
-            <p> $ XXX</p>
+        <article class="row d-flex fondoAzul justify-content-end">
+          <div id="total" class="mr-5 pl-3 pr-5 py-3 rounded">
+            <h3 class="pr-3  py-2"> TOTAL </h3>
+            <p class="pr-3  py-2"> $ XXX </p>
           </div>
         </article>
       </section>
