chicos envios mis solapas finalizadas. cualquier comentario me avisan

--- a/REGISTRATE.html
+++ b/REGISTRATE.html
@@ -4,9 +4,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/registrocss.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no ">
     <title>BuyTech! Registro</title>
@@ -36,111 +38,119 @@
 
       <a class="mt-2 d-none d-md-block d-lg-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary  mt-2 d-none d-md-block d-lg-none float-right" name="button"><i class="icon ion-md-menu"></i></button></a>
     </header>
-
-      <section class="row register ">
-        <div class="col-6 mx-auto">
-
-         <h2 class="text-center">Registracion</h3>
-        </div>
-      </section>
-    <form>
-      <div class="registracion">
-      <div class="form-group">
-        <label for="nombre">Nombre</label>
-         <input type="text" class="form-control" id="nombre" placeholder="Nombre">
-         <small id="emailHelp" class="form-text text-muted"></small>
-       </div>
-       <div class="form-group">
-         <label for="apellido">Apellido</label>
-         <input type="text" class="form-control" id="apellido" placeholder="Apellido">
-         <small id="emailHelp" class="form-text text-muted"></small>
-        </div>
-         <div class="form-group">
-           <label for="direccion">Direccion</label>
-           <input type="text" class="form-control" id="direccion" placeholder="Direccion">
-           <small id="emailHelp" class="form-text text-muted"></small>
-         </div>
-         <div class="form-group">
-           <label for="Numero">Numero</label>
-           <input type="number" class="form-control" id="Numero" placeholder="Numero">
-           <small id="emailHelp" class="form-text text-muted"></small>
-         </div>
-         <div class="form-group">
-           <label for="piso/departamento">Piso/Departamento</label>
-           <input type="text" class="form-control" id="piso/departamento" placeholder="Piso/Departamento">
-           <small id="emailHelp" class="form-text text-muted"></small>
-         </div>
-         <div class="form-group">
-           <label for="ciudad">Ciudad</label>
-           <input type="text" class="form-control" id="ciudad" placeholder="Ciudad">
-           <small id="emailHelp" class="form-text text-muted"></small>
-         </div>
-         <div class="form-group">
-          <label for="provincia">Provincia</label>
-          <input type="text" class="form-control" id="provincia" placeholder="Provincia">
-          <small id="emailHelp" class="form-text text-muted"></small>
-       </div>
-       <div class="form-group">
-          <label for="codigopostal">CP</label>
-          <input type="codigopostal" class="form-control" id="codigopostal" placeholder="CP">
-          <small id="emailHelp" class="form-text text-muted"></small>
-        </div>
-        <div class="form-group">
-           <label for="telefono">Telefono</label>
-           <input type="tel" class="form-control" id="telefono" placeholder="Telefono">
-           <small id="emailHelp" class="form-text text-muted"></small>
-         </div>
-        <div class="form-group">
-          <label for="email">E-email</label>
-          <input type="email" class="form-control" id="email" placeholder="E-mail">
-          <small id="emailHelp" class="form-text text-muted"></small>
-        </div>
-        <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              Declaro conocer y aceptar los Terminos y Condiciones y la Politica de Privacidad y Seguridad
-            </label>
+    <div class="container">
+    <section class="">
+        <div class="col-12 mx-auto">
+         <h2 class="text-center">Registrate | ¿Ya tenés una cuenta?  </h3>
           </div>
-        </div>
-        <button type="return" class="btn btn-primary">Volver</button>
-        <button type="Guardar" class="btn btn-primary" >Guardar</button>
+     <form>
+                       <div class="form-group">
+                    <label for="nombre">Nombre*</label>
+                     <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
+                     <small id="emailHelp" class="form-text text-muted"></small>
+                </div>
+                 <div class="form-group">
+                   <label for="apellido">Apellido*</label>
+                   <input type="text" class="form-control" id="apellido" placeholder="Apellido" required>
+                   <small id="emailHelp" class="form-text text-muted"></small>
+                  </div>
+       <div class="form-group">
+         <label for="direccion">Direccion</label>
+         <input type="text" class="form-control" id="direccion" placeholder="Direccion">
+         <small id="emailHelp" class="form-text text-muted"></small>
+       </div>
+       <div class="form-group">
+         <label for="Numero">Numero</label>
+         <input type="number" class="form-control" id="Numero" placeholder="Numero">
+         <small id="emailHelp" class="form-text text-muted"></small>
+       </div>
+       <div class="form-group">
+         <label for="piso/departamento">Piso/Departamento</label>
+         <input type="text" class="form-control" id="piso/departamento" placeholder="Piso/Departamento">
+         <small id="emailHelp" class="form-text text-muted"></small>
+       </div>
+       <div class="form-group">
+         <label for="ciudad">Ciudad</label>
+         <input type="text" class="form-control" id="ciudad" placeholder="Ciudad">
+         <small id="emailHelp" class="form-text text-muted"></small>
+       </div>
+       <div class="form-group">
+        <label for="provincia">Provincia</label>
+        <input type="text" class="form-control" id="provincia" placeholder="Provincia">
+        <small id="emailHelp" class="form-text text-muted"></small>
      </div>
-    </form>
+     <div class="form-group">
+        <label for="codigopostal">Codigo Postal</label>
+        <input type="codigopostal" class="form-control" id="codigopostal" placeholder="Codigo Postal">
+        <small id="emailHelp" class="form-text text-muted"></small>
+      </div>
+      <div class="form-group">
 
-  <div class="numeros_contacto">
-    <div class="contactos">
-      <div id = "caja_contacto" class="caja_contacto">
-            <div class="servicios">
-               <p>Call Center</p>
-               <a>+54 11 8888-4444</a>
-               <br>
-            </div>
-            <div class="servicios">
-               <p>Ventas</p>
-               <a>+54 11 8888-3333</a>
-                <br>
-            </div>
-            <div class="servicios">
-             <p>Post Venta</p>
-             <a>+54 11 8888-5555</a>
-              <br>
-            </div>
-            <div class="servicios">
-            <p>Soporte Tecnico</p>
-            <a>+54 11 8888-6666</a>
-             <br>
-          </div>
+       </div>
+      <div class="form-group">
+         <label for="telefono">Telefono</label>
+         <input type="tel" class="form-control" id="telefono" placeholder="Telefono">
+         <small id="emailHelp" class="form-text text-muted"></small>
+       </div>
+      <div class="form-group">
+        <label for="email">E-email*</label>
+        <input type="email" class="form-control" id="email" placeholder="E-mail"required>
+        <small id="emailHelp" class="form-text text-muted"></small>
       </div>
-    </div>
-  </div>
-    <div class="container_redes">
-      <div class="container-footer">
-          <div class="caja_contacto_social">
-            <a class= "texto-contactenos" href="#">CONTÁCTENOS</a>
-          </div>
+      <div class="form-group">
+        <label for="email">Contraseña*</label>
+        <input type="password" class="form-control" id="password" placeholder="Contraseña"required>
+        <small id="emailHelp" class="form-text text-muted"></small>
       </div>
+      <div class="form-group">
+      <label for="Pais">Pais*</label>
+      <select class="pais" required>
+         <option value>Por favor, seleccione una opción</option>
+         <option value="ar">Argentina</option>
+         <option value="br">Brasil</option>
+         <option value="Pr">Paraguay</option>
+         <option value="Bo">Bolivia</option>
+         <option value="Pe">Perú</option>
+         <option value="ur">Uruguay</option>
+      </select>
+
+      </div>
+      <div class="form-group">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="gridCheck">
+          <label class="form-check-label" for="gridCheck">
+            Declaro conocer y aceptar los Terminos y Condiciones y la Politica de Privacidad y Seguridad
+          </label>
+        </div>
+      </div>
+      <button type="Guardar" id="save" class="btn btn-primary" >Guardar</button>
+      </form>
+
+      <div class="">
+
     </div>
+    <div class="container">
+
+  <div class="numeros_contacto row">
+        <div class="col-lg-3 col-md-3" >
+             <ion-icon name="call"></ion-icon>
+        <b class ="text-sm-right">Call Center</b><br/><a href="#">+54 11 8888-4444</a>
+        </div>
+        <div class="col-lg-3 col-md-3">
+             <ion-icon name="call"></ion-icon>
+        <b>Ventas</b><br/><a href="#">+54 11 8888-5555</a>
+        </div>
+        <div class="col-lg-3 col-md-3">
+             <ion-icon name="call"></ion-icon>
+        <b>Post-Venta</b><br/><a href="#">+54 11 8888-6666</a>
+        </div>
+        <div class="col-lg-3 col-md-3">
+             <ion-icon name="call"></ion-icon>
+        <b>Soporte Tecnico</b><br/><a href="#">+54 11 8888-7777</a>
+        </div>
+      </div>
+        </section>
+      </div>
     <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
       <nav id="navbar" class="d-flex justify-content-center">
         <ul class=" nav  row justify-content-around p-2">
