chicos actualizo el archivo login

--- a/LOGIN.html
+++ b/LOGIN.html
@@ -34,100 +34,78 @@
       <a class="mt-2 d-block d-md-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary mt-2 d-block d-md-none float-right" name="button"> <i class="icon ion-md-menu"></i></button></a>
       <a class="mt-2 d-none d-md-block d-lg-none float-right" href="#navbarMobile"> <button type="button" class="btn btn-primary  mt-2 d-none d-md-block d-lg-none float-right" name="button"><i class="icon ion-md-menu"></i></button></a>
     </header>
-<<<<<<< Updated upstream
-      <div class="row containerPrincipal">
+<section>
+        <div class="container">
         <div class="login_page">
-          <div class="login_container">
-           <img id="logo" src="buytechlogo.png" alt="">
+          <div class="login">
            <div class="circulo"></div>
           <h3 class ="titulo secundario">Inicio de Sesión</h3>
           <div class="form-group">
+              <div class="usuario-datos">
           <label for="usuario">Usuario</label>
           <input type="email" class="form-control" id="usuario" aria-describedby="emailHelp" placeholder="usuario@email.com">
           <small id="emailHelp" class="usuario"></small>
-         <div class="form-group">
+          </div>
+         <div class="pass-datos">
           <label for="contraseña">Contraseña</label>
           <input type="password" class="form-control" id="contraseña" placeholder="contraseña">
           <small id="emailHelp" class="contraseña"></small>
          </div>
         <div class="login-form">
-         <a href="#" class = "btn btn link" id = "forgotten-password" role ="button">He olvidado mi contraseña</a>
-
-
-=======
-    <section>
-        <div class="container">
-              <div class="login_page">
-                  <div class="login">
-                         <div class="circulo"></div>
-                         <h3 class ="titulo secundario">Inicio de Sesión</h3>
-                         <div class="form-group">
-                              <div class="usuario-datos">
-                                  <label for="usuario">Usuario</label>
-                                  <input type="email" class="form-control" id="usuario" aria-describedby="emailHelp" placeholder="usuario@email.com">
-                                  <small id="emailHelp" class="usuario"></small>
-                              </div>
-                              <div class="pass-datos">
-                                  <label for="contraseña">Contraseña</label>
-                                  <input type="password" class="form-control" id="contraseña" placeholder="contraseña">
-                                  <small id="emailHelp" class="contraseña"></small>
-                              </div>
-                                  <div class="login-form">
-                                  <a href="forgotten-password" class = "btn btn link" id = "forgotten-password">He olvidado mi contraseña?</a>
-                              </div>
-                          </div>
-                      <button type="submit" id="iniciosecion" class="btn btn-primary">Iniciar Sesión</button>
-                  </div>
-              </div>
-          </div>
-          <div class="container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/ofertas.png" class="d-block w-100 img-responsive" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/ofertas2.png" class="d-block w-100 img-responsive" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="img/ofertas.png" class="d-block w-100 img-responsive" alt="...">
-              </div>
+        <a href="forgotten-password" class = "btn btn link" id = "forgotten-password">He olvidado mi contraseña?</a>
+     </div>
+    </div>
+    <button type="submit" id="iniciosecion" class="btn btn-primary">Iniciar Sesión</button>
+                    </div>
+                </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="container">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/ofertas.png" class="d-block w-100 img-responsive" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/ofertas2.png" class="d-block w-100 img-responsive" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/ofertas.png" class="d-block w-100 img-responsive" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
->>>>>>> Stashed changes
-        </div>
-  </section>
-  <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
-    <nav id="navbar" class="d-flex justify-content-center">
-      <ul class=" nav  row justify-content-around p-2">
-        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-          <a class="nav-link  text-center " href="#">NOSOTROS</a>
-        </li>
-        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-          <a class="nav-link  text-center " href="#">CONTACTO</a>
-        </li>
-        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-          <a class="nav-link  text-center " href="carrito.html">CARRITO DE COMPRAS</a>
-        </li>
-        <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-          <a class="nav-link   text-center " href="faq.html">PREGUNTAS FRECUENTES</a>
-        </li>
-      </ul>
-    </nav>
+    </section>
+    <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
+      <nav id="navbar" class="d-flex justify-content-center">
+        <ul class=" nav  row justify-content-around p-2">
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">NOSOTROS</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">CONTACTO</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+          </li>
+          <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
+            <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+          </li>
+        </ul>
+      </nav>
 
-  </footer>
-  </body>
-</html>
+    </footer>
+    </body>
+  </html>
