--- a/REGISTRATE.html
+++ b/REGISTRATE.html
@@ -30,7 +30,7 @@
             <a class="nav-link " href="carrito.html">CARRITO DE COMPRAS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">PERFIL DE USUARIO</a>
+            <a class="nav-link " href="PERFIL.html">PERFIL DE USUARIO</a>
           </li>
         </ul>
       </nav>
