--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/faqcss.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no ">
   <title> BuyTech! FAQ</title>
@@ -26,7 +27,7 @@
           <a class="nav-link " href="carrito.html">CARRITO DE COMPRAS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">PERFIL DE USUARIO</a>
+          <a class="nav-link " href="PERFIL.html">PERFIL DE USUARIO</a>
         </li>
       </ul>
     </nav>
