--- a/productos.html
+++ b/productos.html
@@ -16,133 +16,171 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:500&display=swap" rel="stylesheet">
   <!-- mi CSS -->
-  <link rel="stylesheet" href="productos.css">
-  <title>Productos</title>
+  <link rel="stylesheet" href="css/productos.css">
+  <title>Detalle</title>
 </head>
 
 <body>
   <!-- acá va la barra de navegación -->
   <header>
-    <header>
-      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <!-- <h5 class="my-0 mr-md-auto font-weight-normal"></h5> -->
-        <a href="home.html" class="my-0 mr-md-auto"><img src="img/logo-lg.png" alt="" width=100vw></a>
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+      <a class="navbar-brand" href="home.html"> <img src="img/logo-lg.png" alt="BuyTech" width="100vw"> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <nav class="navbar navbar-light">
-          <form class="form-inline">
-            <button class="btn btn-none my-2 my-sm-0" type="submit"><ion-icon ios="ios-search" md="md-search"></ion-icon></button>
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
-          </form>
-        <!-- </nav> barra de buscador -->
+      <div class="collapse navbar-collapse float-right" id="navbarsExample04">
+        <form class="form-inline my-2 my-md-0  margin-center">
+          <input class="form-control" type="text" placeholder="Buscar...">
+        </form>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="perfil.html"><ion-icon name="person"></ion-icon> Perfil <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carrito.html"><ion-icon name="cart">ho</ion-icon>Carrito</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div> -->
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-        <nav class="my-2 my-md-0">
-          <a class="p-2 text-dark" href="#">registro</a>
-          <a class="p-2 text-dark" href="#">login</a>
-        </nav>
+  <!-- acá va la barra de filtro y ubicación (compus -> asus -> etc) -->
 
-        <div class="dropdown mr-md-3">
-          <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <ion-icon ios="ios-cart" md="md-cart"></ion-icon>
-          </button>
-          <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">productos</a>
-            <a class="dropdown-item" href="#">o redirección a carrito no se</a>
-          </div>
+  <!-- acá va el cuerpo de  la pagína, lista de productos -->
+  <main class="container-fluid d-flex" style="padding-left: 0px;padding-right: 0px;">
+    <nav class="col-md-2 col-lg-2 d-inline d-sx-none d-sm-none d-md-block bg-light container m-0">
+      <div class="">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <br>Marca <br>
+          <input type="checkbox" name="marca" value=""> Lenovo <br>
+          <input type="checkbox" name="marca" value=""> HP <br>
+          <input type="checkbox" name="marca" value=""> Asus <br>
+          <input type="checkbox" name="marca" value=""> Acer <br> <br>
+          </li>
+          <li class="nav-item">
+            Procesador <br>
+            <input type="checkbox" name="Procesador" value=""> Core i5 <br>
+            <input type="checkbox" name="Procesador" value=""> Core i7 <br>
+            <input type="checkbox" name="Procesador" value=""> AMD <br>
+            <input type="checkbox" name="Procesador" value=""> Intel Celeron <br><br>
+          </li>
+          <li class="nav-item">
+            Tamaño de pantalla <br>
+            <input type="checkbox" name="pantalla" value=""> 15.6 pulgadas <br>
+            <input type="checkbox" name="pantalla" value=""> 14 pulgadas <br>
+            <input type="checkbox" name="pantalla" value=""> 13.3 pulgadas <br>
+            <input type="checkbox" name="pantalla" value=""> 14.1 pulgadas <br><br>
+          </li>
+          <li class="nav-item">
+            Memoria RAM <br>
+            <input type="checkbox" name="ram" value=""> De 4GB a 8GB <br>
+            <input type="checkbox" name="ram" value=""> Menos de 4GB <br>
+            <input type="checkbox" name="ram" value=""> Más de 8GB <br>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="col-md-10 d-flex row">
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
         </div>
-
-        <div class="dropdown">
-          <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <ion-icon ios="ios-menu" md="md-menu"></ion-icon>
-          </button>
-          <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">Perfil</a>
-          </div>
+      </div>
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
         </div>
+      </div>
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
+        </div>
+      </div>
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
+        </div>
+      </div>
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
+        </div>
+      </div>
+      <div class="card col-sm-12 col-md-3 col-lg-3 m-3" >
+        <img src="https://images.fravega.com/s250/438f0f480558b68580f361267d598856.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Marca y modelo</h5>
+          <h6 class="price"> $$$ </h6>
+          <p class="card-text">Especificaciones básicas del modelo</p>
+          <a href="detalle.html" class="btn btn-primary">Ver detalle</a>
+        </div>
+      </div>
 
-      </header>
 
-      <!-- acá va la barra de filtro y ubicación (compus -> asus -> etc) -->
 
-      <!-- acá va el cuerpo de  la pagína, lista de productos -->
-      <main>
 
-        <nav  id="listado" class="">
-          <div class="">
+    </section>
 
-            <ion-icon ios="ios-funnel" md="ios-funnel"></ion-icon>
-          </div>
-        </nav>
+    <!-- <nav aria-label="mt-md-3 d-inline" class="mt-md-3">
+      <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><<</a>
+        </li>
+        <li class="page-item active" aria-current="page">
+          <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">>></a>
+        </li>
+      </ul>
+    </nav> -->
 
-        <section id="productos"class="">
-          <div class= "row">
-            <div class="card col-md-4 d-sm-flex">
-              <div class="row">
-                <div class="col-4">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDx5tolT4v3KOR4pO7XRkXr9zvtPamz5JbnQVIee4es7wHV8Yv" class="card-img" alt="Notebook HP">
-                </div>
-                <div class="col-8">
-                  <h5 class="card-title">Título del producto</h5>
-                  <h4 class="card-price">$$$</h4>
-                  <p class="card-text">Acá va una descripción corta</p>
-                  <p class="card-text"><small class="text-muted">  </small></p>
-                  <ion-icon name="heart" class="favorito"></ion-icon>
-                </div>
-              </div>
-            </div>
-            <div class="card col-md-4 d-sm-flex">
-              <div class="row">
-                <div class="col-4">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDx5tolT4v3KOR4pO7XRkXr9zvtPamz5JbnQVIee4es7wHV8Yv" class="card-img" alt="Notebook HP">
-                </div>
-                <div class="col-8">
-                  <h5 class="card-title">Título del producto</h5>
-                  <h4 class="card-price">$$$</h4>
-                  <p class="card-text">Acá va una descripción corta</p>
-                  <p class="card-text"><small class="text-muted">  </small></p>
-                  <ion-icon name="heart" class="favorito"></ion-icon>
-                </div>
-              </div>
-            </div>
-          </div>
 
-        </section>
 
-        <nav aria-label="mt-md-3" class="mt-md-3">
-          <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><<</a>
-            </li>
-            <li class="page-item active" aria-current="page">
-              <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#">>></a>
-            </li>
-          </ul>
-        </nav>
-
-      </main>
-      <!-- acá va el footer -->
-      <footer class="container-fluid p-3 mt-3 d-flex justify-content-center">
-        <nav id="navbar" class="d-flex justify-content-center">
-          <ul class=" nav  row justify-content-around p-2">
-            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link  text-center " href="#">NOSOTROS</a>
-            </li>
-            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link  text-center " href="#">CONTACTO</a>
-            </li>
-            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link  text-center " href="carrito.html">CARRITO DE COMPRAS</a>
-            </li>
-            <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-              <a class="nav-link   text-center " href="faq.html">PREGUNTAS FRECUENTES</a>
-            </li>
-          </ul>
-        </nav>
-
-      </footer>
-    </body>
-    </html>
+  </main>
+  <!-- acá va el footer -->
+  <footer class="footer mt-auto py-3 bg-info">
+    <div class="container justify-center">
+      <span class="m-5"><a href="#" class="text-light">CONTACTO</a></span>
+      <span class="m-5"><a href="#" class="text-light">NOSOTROS</a></span>
+      <span class="m-5"><a href="#" class="text-light">PREGUNTAS FRECUENTES</a></span>
+    </div>
+  </footer>
+</body>
+</html>
