--- a/LOGIN.html
+++ b/LOGIN.html
@@ -27,7 +27,7 @@
             <a class="nav-link " href="carrito.html">CARRITO DE COMPRAS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">PERFIL DE USUARIO</a>
+            <a class="nav-link " href="PERFIL.html">PERFIL DE USUARIO</a>
           </li>
         </ul>
       </nav>
@@ -98,10 +98,10 @@
             <a class="nav-link  text-center " href="#">CONTACTO</a>
           </li>
           <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-            <a class="nav-link  text-center " href="#">CARRITO DE COMPRAS</a>
+            <a class="nav-link  text-center " href="carrito.html">CARRITO DE COMPRAS</a>
           </li>
           <li class="nav-item  col-xs-12 col-md-6 col-lg-3">
-            <a class="nav-link   text-center " href="#">PREGUNTAS FRECUENTES</a>
+            <a class="nav-link   text-center " href="faq.html">PREGUNTAS FRECUENTES</a>
           </li>
         </ul>
       </nav>
