--- a/home.html
+++ b/home.html
@@ -56,28 +56,28 @@
         <div id="productContainer"class="row mx-3 px-3 rounded">
 
           <div class="col-12">
-            <h2 id="titulo-categorias"class="text-center py-3 my-3 rounded">Categorías </h2>
+            <h2 id="titulo-categorias"class="text-center py-3 my-3 rounded"><a href="productos.html">Categorías</a> </h2>
           </div>
           <div id="imgcontainer" class="d-flex flex-row justify-content-between row pb-3">
             <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
               <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
               <h3 class="text-center">COMPUTADORAS</h3>
-              <p class="text-center p-2">Ver más!</p>
+              <p class="text-center p-2"><a id="linkAProductos"href="productos.html">Ver más!</a></p>
             </div>
             <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
               <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
               <h3>CELULARES</h3>
-              <p class="text-center p-2">Ver más!</p>
+              <p class="text-center p-2"><a id="linkAProductos"href="productos.html">Ver más!</a></p>
             </div>
             <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
               <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
               <h3> TABLETS</h3>
-              <p class="text-center p-2">Ver más!</p>
+              <p class="text-center p-2"><a id="linkAProductos"href="productos.html">Ver más!</a></p>
             </div>
             <div id="separadorDeProducto"class="col-xs-6 col-sm-3 col-md-2.5 px-auto mx-auto pb-4 rounded mx-1">
               <img id="imagenDeProducto"class="d-block " src="https://placeimg.com/640/480/tech" alt="producto">
               <h3>OTROS</h3>
-              <p class="text-center p-2">Ver más!</p>
+              <p class="text-center p-2"><a id="linkAProductos"href="productos.html">Ver más!</a></p>
             </div>
           </div>
 
